--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
   "tabWidth": 2,
+  "printWidth": 204,
   "singleQuote": false,
   "trailingComma": "none",
   "plugins": ["prettier-plugin-css-order"],
