--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "cashmoo",
   "version": "1.0.0",
   "description": "CashMoo personal finance control",
-  "main": "main.js",
   "author": "CashMoo",
   "license": "MIT",
+  "main": "main.js",
   "type": "module",
   "engines": {
     "node": ">=16.0.0",
     "npm": ">=8.0.0"
   },
+  "electronVersion": "38.2.0",
   "scripts": {
     "start": "electron .",
     "start:dev": "electron . --enable-logging --inspect",
@@ -17,6 +18,9 @@
     "start:windows": "set NODE_ENV=production && electron .",
     "lint": "eslint . --fix && prettier . --write",
     "clean": "npx rimraf node_modules package-lock.json",
+    "icons:prepare": "chmod +x scripts/generate-icons.sh",
+    "icons:generate": "node scripts/generate-icons.js",
+    "icons:verify": "node scripts/verify-icons.js",
     "build": "electron-builder",
     "build:win": "electron-builder --win",
     "build:mac": "electron-builder --mac",
@@ -36,7 +40,6 @@
     "prettier": "^3.6.2",
     "prettier-plugin-css-order": "^2.1.2"
   },
-  "electronVersion": "38.2.0",
   "build": {
     "appId": "com.cashmoo.app",
     "productName": "CashMoo",
@@ -61,30 +64,63 @@
       }
     ],
     "win": {
-      "target": "nsis",
+      "target": [
+        "nsis",
+        "portable"
+      ],
       "icon": "assets/icon.ico",
       "requestedExecutionLevel": "asInvoker"
-    },
-    "mac": {
-      "target": "dmg",
-      "icon": "assets/icon.icns",
-      "category": "public.app-category.finance",
-      "bundleVersion": "1.0.0"
-    },
-    "linux": {
-      "target": "AppImage",
-      "icon": "assets/icon.png",
-      "category": "Office"
     },
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": true,
-      "createStartMenuShortcut": true
+      "createStartMenuShortcut": true,
+      "installerIcon": "assets/icon.ico",
+      "uninstallerIcon": "assets/icon.ico"
+    },
+    "mac": {
+      "target": [
+        "dmg",
+        "zip"
+      ],
+      "icon": "assets/icon.icns",
+      "category": "public.app-category.finance",
+      "bundleVersion": "1.0.0",
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "entitlements": "build/entitlements.mac.plist",
+      "entitlementsInherit": "build/entitlements.mac.plist"
     },
     "dmg": {
       "title": "CashMoo Installer",
-      "icon": "assets/icon.icns"
+      "icon": "assets/icon.icns",
+      "backgroundColor": "#ffffff",
+      "window": {
+        "width": 540,
+        "height": 380
+      },
+      "contents": [
+        {
+          "x": 140,
+          "y": 180
+        },
+        {
+          "x": 400,
+          "y": 180,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb",
+        "rpm"
+      ],
+      "icon": "assets/icon.png",
+      "category": "Office"
     }
   }
 }
