--- a/package.json
+++ b/package.json
@@ -26,19 +26,17 @@
     "build:mac": "electron-builder --mac",
     "build:linux": "electron-builder --linux"
   },
-  "dependencies": {
-    "electron": "^38.2.0"
-  },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.36.0",
     "electron-builder": "^25.0.5",
-    "eslint": "^9.36.0",
+    "electron": "^38.2.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "eslint": "^9.36.0",
     "globals": "^16.4.0",
-    "prettier": "^3.6.2",
-    "prettier-plugin-css-order": "^2.1.2"
+    "prettier-plugin-css-order": "^2.1.2",
+    "prettier": "^3.6.2"
   },
   "build": {
     "appId": "com.cashmoo.app",
